rsworkspace/crates/trogon-decider-guest-macros/tests/ui/bundle_mismatched_event.stderr
error[E0271]: type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
   |
note: expected this to be `ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:31:18
   |
31 |     type Event = WrongEvent;
   |                  ^^^^^^^^^^
note: required for `Session` to implement `GuestSession`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
note: required by a bound in `Guest::Session`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ required by this bound in `Guest::Session`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
   |
note: expected this to be `ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:31:18
   |
31 |     type Event = WrongEvent;
   |                  ^^^^^^^^^^
   = note: this error originates in the macro `export_decider` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:60:5
   |
60 |     WrongEventCommand {
   |     ^^^^^^^^^^^^^^^^^ type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
   |
note: expected this to be `ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:31:18
   |
31 |     type Event = WrongEvent;
   |                  ^^^^^^^^^^
note: required by a bound in `__assert_bundle_shares_state_event`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ required by this bound in `__assert_bundle_shares_state_event`
   = note: this error originates in the macro `export_decider` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
   |
note: expected this to be `ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:31:18
   |
31 |     type Event = WrongEvent;
   |                  ^^^^^^^^^^
note: required for `Session` to implement `GuestSession`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
note: required by a bound in `_export_constructor_session_cabi`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ required by this bound in `_export_constructor_session_cabi`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
   |
note: expected this to be `ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:31:18
   |
31 |     type Event = WrongEvent;
   |                  ^^^^^^^^^^
note: required for `Session` to implement `GuestSession`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
note: required by a bound in `_export_method_session_evolve_cabi`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ required by this bound in `_export_method_session_evolve_cabi`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
   |
note: expected this to be `ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:31:18
   |
31 |     type Event = WrongEvent;
   |                  ^^^^^^^^^^
note: required for `Session` to implement `GuestSession`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
note: required by a bound in `__post_return_method_session_evolve`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ required by this bound in `__post_return_method_session_evolve`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
   |
note: expected this to be `ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:31:18
   |
31 |     type Event = WrongEvent;
   |                  ^^^^^^^^^^
note: required for `Session` to implement `GuestSession`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
note: required by a bound in `_export_method_session_decide_cabi`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ required by this bound in `_export_method_session_decide_cabi`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
   |
note: expected this to be `ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:31:18
   |
31 |     type Event = WrongEvent;
   |                  ^^^^^^^^^^
note: required for `Session` to implement `GuestSession`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
note: required by a bound in `__post_return_method_session_decide`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ required by this bound in `__post_return_method_session_decide`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
   |
note: expected this to be `ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:31:18
   |
31 |     type Event = WrongEvent;
   |                  ^^^^^^^^^^
note: required for `Session` to implement `GuestSession`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
note: required by a bound in `_export_method_session_snapshot_cabi`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ required by this bound in `_export_method_session_snapshot_cabi`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ type mismatch resolving `<WrongEventCommand as Decider>::Event == ScheduleEvent`
   |
note: expected this to be `ScheduleEvent`
  --> tests/ui/bundle_mismatched_event.rs:31:18
   |
31 |     type Event = WrongEvent;
   |                  ^^^^^^^^^^
note: required for `Session` to implement `GuestSession`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
note: required by a bound in `__post_return_method_session_snapshot`
  --> tests/ui/bundle_mismatched_event.rs:52:1
   |
52 | / export_decider!(
53 | |     CreateSchedule {
54 | |         type_url = CREATE_SCHEDULE_TYPE_URL,
55 | |         proto = v1::CreateSchedule,
...  |
66 | |     },
67 | | );
   | |_^ required by this bound in `__post_return_method_session_snapshot`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)
